src/objects/echosign_dev1__Agreement_Update_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings category related to update of an agreement</description>
    <fields>
        <fullName>echosign_dev1__Add_Audit_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to attach audit report PDF to the agreement record after agreement transaction is completed.</description>
        <inlineHelpText>Enable this setting to attach audit report PDF to the agreement record after agreement transaction is completed.</inlineHelpText>
        <label>Add Audit Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_Url__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to add an URL link for signed PDF to the Agreement record.</description>
        <inlineHelpText>Enable this setting to add an URL link for signed PDF to the Agreement record.</inlineHelpText>
        <label>Add Signed PDF Url</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to add latest PDF to an agreement record whenever an agreement is signed / approved / accepted / filled / delivered by the participant.</description>
        <inlineHelpText>Enable this setting to add latest PDF to an agreement record whenever an agreement is signed / approved / accepted / filled / delivered by the participant.</inlineHelpText>
        <label>Add Signed PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_as_Separate_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to attach final agreement copy as separate PDFs for each document to the agreement record when agreement transaction is completed.</description>
        <inlineHelpText>Enable this setting to attach final agreement copy as separate PDFs for each document to the agreement record when agreement transaction is completed.</inlineHelpText>
        <label>Add Signed PDF as Separate Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Supporting_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to attach PDF of each supporting document uploaded by participants to the agreement record after agreement transaction is completed.</description>
        <inlineHelpText>Enable this setting to attach PDF of each supporting document uploaded by participants to the agreement record after agreement transaction is completed.</inlineHelpText>
        <label>Add Supporting Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attach_Audit_Report_to_Signed_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to attach an audit report to the final signed agreement PDF.</description>
        <inlineHelpText>Enable this setting to attach an audit report to the final signed agreement PDF.</inlineHelpText>
        <label>Attach Audit Report to Final Signed PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Hide_Intermediate_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to stop attaching intermediate signed documents.</description>
        <inlineHelpText>Enable this setting to stop attaching intermediate signed documents.</inlineHelpText>
        <label>Hide Intermediate Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Show_Images__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to show latest images of all pages of all the documents associated with an agreement.</description>
        <inlineHelpText>Enable this setting to show latest images of all pages of all the documents associated with an agreement.</inlineHelpText>
        <label>Show Images</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Update_Agreement_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to update events of an agreement</description>
        <inlineHelpText>Enable this setting to update events of an agreement</inlineHelpText>
        <label>Update Agreement Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Update_Agreement_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to update the status of an agreement. Disabling this setting will disable certain updates on the agreement record</description>
        <inlineHelpText>Enable this setting to update the status of an agreement. Disabling this setting will disable certain updates on the agreement record</inlineHelpText>
        <label>Update Agreement Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Adobe Sign Agreement Update Settings</label>
</CustomObject>